...
        guard state.gesturesEnabled else { return EffectTask.none }
        return .run { send in
            if await runtimeClient.getActivationStatus() { return }
            let invalidationReason = await runtimeClient.start()
            switch invalidationReason {
            case .none, .expired:
                return
            case .error, .resignedFrontmost, .sessionInProgress, .suppressedBySystem:
                await send(.didEncounterGestureTrackingError)
            @unknown default:
                return
            }
        }
...

    var runtimeClientExpirationAlert: AlertState<Session.Action> {
        AlertState {
            TextState("Do you want to continue the session?")
        } actions: {
            ButtonState(role: .none, action: .didDismissRuntimeClientExpirationAlert) {
                TextState("Continue")
            }
            ButtonState(role: .destructive, action: .stopButtonDidTap) {
                TextState("Stop")
            }
        }
    }
...
