...
                        Text("\(viewStore.potCount)")
                            .font(.title3.bold())
                            .foregroundColor(.customGreen)
                    }
                    .buttonStyle(.bordered)
                    .tint(.customGreen)
                    .accessibilityLabel("Register Potted Ball")

                    Button {
                        viewStore.send(.didRegisterShot(isSuccess: false), animation: .default)
                    } label: {
                        Text("\(viewStore.missCount)")
                            .font(.title3.bold())
                            .foregroundColor(.customRed)
                    }
                    .buttonStyle(.bordered)
                    .tint(.customRed)
                    .accessibilityLabel("Register Missed Ball")
                }
                .disabled(viewStore.isPaused)
            }
        }
    }
}
...
